@@ -26,8 +26,9 @@
 @$puts "<stdio.h>" \zip@>
 @$rename "<stdio.h>" \zip@>
 @$remove "<stdio.h>" \zip@>
-@$sscanf "<stdio.h>" \zip@>
+@$snprintf "<stdio.h>" \zip@>
 @$sprintf "<stdio.h>" \zip@>
+@$sscanf "<stdio.h>" \zip@>
 @$stderr "<stdio.h>" \zip@>
 @$stdin "<stdio.h>" \zip@>
 @$stdout "<stdio.h>" \zip@>
