@@ -1,3 +1,12 @@
+2023-08-02  Andreas Scherer  <https://ascherer.github.io>
+
+	* ctang-bs.ch,
+	* ctangle.c,
+	* ctangle.w,
+	* ctwill-w2c.ch,
+	* cweave.w,
+	* system.bux: Replace 'sprintf' with 'snprintf'.
+
 2023-08-01  Andreas Scherer  <https://ascherer.github.io>
 
 	* comm-w2c.ch,
